Percentage calc add

--- a/project1(html,css)/index.html
+++ b/project1(html,css)/index.html
@@ -2,15 +2,19 @@
 <html>
     <head>
         <title>Hello-WebDev</title>
+        <script type="text/javascript" src="index.js"></script>
+        <link rel="stylesheet" href="main.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
-        <table cellspacing="20">
+        <table cellspacing="20" class="headertable">
             <tr>
-                <td><img src="img\WhatsApp Image 2020-04-23 at 10.55.11 AM.jpeg" alt="Profile Photo" height="100" width="105"></td>
-                <td><h1>Naman Mittal</h1></td>
+                <td><img src="img\lion.jpg" alt="Profile Photo" height="100" width="105" class="profileimg"></td>
+                <td><h1><b>Naman Mittal</b></h1></td>
             </tr>
         </table>
-        <table cellspacing="20" >
+        <table cellspacing="100" class="navbar">
             <tr>
                 <td><a href="#">About</a></td>
                 <td><a href="#">Projects</a></td>
